Added CNAME, updated contact

--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
       <!-- Main component for a primary marketing message or call to action -->
       <div class="jumbotron">
         <h2><code> &gt;&gt; Contact information</code></h2>
-        <p style="padding-top: 20px;">TBD, Boyer Hall of Science, Arcadia University.</p>
+        <p style="padding-top: 20px;">Boyer Hall of Science 328, Arcadia University.</p>
         <p>E-mail: fordv@arcadia.edu</p>
       </div>
 
