--- a/publications.html
+++ b/publications.html
@@ -77,10 +77,9 @@
 
       <!-- Main component for a primary marketing message or call to action -->
       <div class="jumbotron normal-text">
-        <h2><code> &gt;&gt; Publications</code></h2>
-        <p style="padding-top: 20px;">A list of the most recent publications:</p>
+        <h2 style="padding-bottom: 20px;"><code> &gt;&gt; Publications</code></h2>
         <ul>
-          <li>V. Ford, A. Siraj, A. Haynes, and E. L. Brown, “Capture the Flag Unplugged: An Offline Cyber Competition”, accepted at the ACM Special Interest Group on Computer Science Education (SIGCSE) 2017.</li>
+          <li><a href="papers/Ford Siraj CTF-unplugged.pdf" target="_blank" rel="noopener norefferer">V. Ford, A. Siraj, A. Haynes, and E. L. Brown, “Capture the Flag Unplugged: An Offline Cyber Competition”, in Proceedings of the ACM Special Interest Group on Computer Science Education (SIGCSE) 2017.</a></li>
           <li><a href="papers/Ford Siraj Rahman Privacy-Preserving Protocol for AMI.pdf" target="_blank" rel="noopener norefferer">V. Ford, A. Siraj, and M. A. Rahman, “Secure and Efficient Protection of Consumer Privacy in Advanced Metering Infrastructure Supporting Fine-grained Data Analysis”, Journal of Computer and System Sciences (Rank A*), in Press, July 2016.</a></li>
           <li><a href="papers/Ford Siraj SecureComm 2015 extended abstract.pdf" target="_blank" rel="noopener norefferer">V. Ford and A. Siraj, “POSTER: Reliable and efficient protection of consumer privacy in Advanced Metering Infrastructure”, Institute for Computer Sciences, Social Informatics and Telecommunications Engineering 2015 B. Thuraisingham et al. (Eds.): SecureComm 2015, LNICST 164, pp. 563–566, 2015.</a></li>
           <li><a href="papers/Cody Ford Siraj fraud detection.pdf" target="_blank" rel="noopener norefferer">C. Cody, V. Ford, and A. Siraj, “Decision Tree Learning for Fraud Detection in Consumer Energy Consumption”, in Proceedings of the 14th IEEE International Conference on Machine Learning and Applications, December 9-11, 2015.</a></li>
