--- a/schedule.html
+++ b/schedule.html
@@ -79,6 +79,7 @@
       <div class="jumbotron normal-text">
         <h2><code> &gt;&gt; My schedule for Fall 2017</code></h2>
         <br>
+        <div class="table-responsive">
     		<table class="table table-bordered table-hover">
     			<thead>
     				<tr>
@@ -165,7 +166,7 @@
     				</tr>
     			</tbody>
     		</table>
-
+        </div>
       </div>
 
     </div> <!-- /container -->
