Quoted the footer message

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <li><p class="lead">First CS Ph.D. Graduate in Cybersecurity: <a href="https://www.tntech.edu/news/releases/tennessee-tech%E2%80%99s-impact-on-cybersecurity-continues-to-expand-with-first-ph.d.-graduate" target="_blank">Tennessee Tech’s impact on cybersecurity continues to expand with first computer science Ph.D. graduate.</a></p></li>
 		</ul>
     <blockquote class="blockquote-reverse lead" style="background-color: #e7e7e7;">
-      <p>Teach me and I will forget. Show me and I may remember. Involve me and I’ll understand.</p>
+      <p><q>Teach me and I will forget. Show me and I may remember. Involve me and I’ll understand.</q></p>
        <footer><cite title="Source Title">Xun Kuang</cite></footer>
     </blockquote>
       </div>
