--- a/schedule.html
+++ b/schedule.html
@@ -95,9 +95,9 @@
     				<tr>
     					<th>08:00 - 09:00</th>
     					<td></td>
+    					<td rowspan="4" class="custom-table RandD">R &amp; D</td>
     					<td></td>
-    					<td></td>
-    					<td></td>
+              <td rowspan="4" class="custom-table RandD">R &amp; D</td>
     					<td></td>
     				</tr>
     				<tr>
@@ -105,23 +105,17 @@
     					<td></td>
     					<td></td>
     					<td></td>
-    					<td></td>
-    					<td></td>
     				</tr>
     				<tr>
     					<th>09:45 - 10:50</th>
     					<td class="custom-table course1">CS 203<br>Landman Library 003</td>
-    					<td></td>
               <td class="custom-table course1">CS 203<br>Landman Library 003</td>
-    					<td></td>
               <td class="custom-table course1">CS 203<br>Landman Library 003</td>
     				</tr>
     				<tr>
     					<th>11:00 - 12:00</th>
               <td class="custom-table course3">Office Hours</td>
-    					<td></td>
     					<td class="custom-table course3">Office Hours</td>
-    					<td></td>
     					<td></td>
     				</tr>
     				<tr>
