Updated link to cybereagles

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <h2><img src="images/profile.jpg" class="img-responsive img-square left thumb-profile" alt="Profile picture"/>
           <code> &gt;&gt; Welcome to my website!</code></h2>
         <p style="padding-top: 20px;">My name is Vitaly Ford. I am an Assistant Professor at Arcadia University, Computer Science and Mathematics Department (<a href="https://www.arcadia.edu/profile/vitaly-ford" target="_blank" rel="noopener norefferer">profile link</a>). I will be teaching Computer Architecture and Data Structures and Algorithms this Fall.</p>
-        <p>Also, I am serving as a senior advisor for the <a href="http://cybereagles.club" target="_blank" rel="noopener norefferer">CyberEagles Cybersecurity Club</a> and as Director of Chapter Development at the <a href="http://cyberstudents.org/" target="_blank" rel="noopener norefferer">National Cybersecurity Student Association</a>.</p>
+        <p>Also, I am serving as a senior advisor for the <a href="http://blogs.cae.tntech.edu/cybereagles/" target="_blank" rel="noopener norefferer">CyberEagles Cybersecurity Club</a> and as Director of Chapter Development at the <a href="http://cyberstudents.org/" target="_blank" rel="noopener norefferer">National Cybersecurity Student Association</a>.</p>
         <hr>
         <p>In my spare time, I enjoy playing table tennis and chess as well as participating in Capture the Flag competitions and coaching student cybersecurity teams.</p>
 		<hr>
