Updating Spring schedule

--- a/schedule.html
+++ b/schedule.html
@@ -51,23 +51,6 @@
             <li><a href="docs/VitalyFordResume.pdf" target="_blank" rel="noopener norefferer">Resume</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="schedule.html">Schedule</a></li>
-      			<!--<li class="dropdown">
-      			  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">CSC 2120 <span class="caret"></span></a>
-      			  <ul class="dropdown-menu">
-        				<li><a href="2120syllabus.html">Syllabus</a></li>
-        				<li><a href="2120programs.html">Programs</a></li>
-                <li><a href="2120examples.html">Examples</a></li>
-        				<li class="active"><a href="schedule.html">Office Hours Schedule</a></li>
-      			  </ul>
-      			</li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">CSC 2121 <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="2121syllabus.html">Syllabus</a></li>
-                <li><a href="2121labs.html">Labs</a></li>
-                <li class="active"><a href="schedule.html">Office Hours Schedule</a></li>
-              </ul>
-            </li>-->
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -76,10 +59,11 @@
     <div class="container">
 
       <!-- Main component for a primary marketing message or call to action -->
-      <div class="jumbotron normal-text">
-        <h2><code> &gt;&gt; My schedule for Fall 2017</code></h2>
+      <div class="jumbotron">
+        <h2><code> &gt;&gt; My schedule for Spring 2018</code></h2>
         <br>
-        <div class="table-responsive">
+        <p>Please email me if you would like to set an appointment outside of the office hours.</p>
+        <div class="table-responsive normal-text">
     		<table class="table table-bordered table-hover">
     			<thead>
     				<tr>
@@ -108,9 +92,9 @@
     				</tr>
     				<tr>
     					<th>09:45 - 10:50</th>
-    					<td class="custom-table course1">CS 203<br>Landman Library 003</td>
-              <td class="custom-table course1">CS 203<br>Landman Library 003</td>
-              <td class="custom-table course1">CS 203<br>Landman Library 003</td>
+    					<td class="custom-table course1">CS 358<br>Boyer Hall 008</td>
+              <td class="custom-table course1">CS 358<br>Boyer Hall 008</td>
+              <td class="custom-table course1">CS 358<br>Boyer Hall 008</td>
     				</tr>
     				<tr>
     					<th>11:00 - 12:00</th>
@@ -119,7 +103,7 @@
     					<td></td>
     				</tr>
     				<tr>
-    					<th>12:00 - 01:00</th>
+    					<th>12:00 - 01:30</th>
     					<td></td>
     					<td></td>
     					<td></td>
@@ -127,31 +111,23 @@
     					<td></td>
     				</tr>
     				<tr>
-    					<th>01:30 - 02:35</th>
-              <td class="custom-table course2">CS 362<br>Boyer 008</td>
-    					<td></td>
-              <td class="custom-table course2">CS 362<br>Boyer 008</td>
-    					<td></td>
-              <td class="custom-table course2">CS 362<br>Boyer 008</td>
-    				</tr>
-    				<tr>
-    					<th>03:00 - 04:00</th>
+    					<th>01:30 - 02:30</th>
               <td class="custom-table course3">Office Hours</td>
     					<td></td>
-    					<td class="custom-table course3  ">Office Hours</td>
+    					<td class="custom-table course3">Office Hours</td>
     					<td></td>
     					<td></td>
     				</tr>
-    				<tr>
-    					<th>03:00 - 04:20</th>
-              <td></td>
+            <tr>
+    					<th>02:45 - 03:50</th>
+              <td class="custom-table course2">CS 242<br>Boyer Hall 014</td>
     					<td></td>
+              <td class="custom-table course2">CS 242<br>Boyer Hall 014</td>
     					<td></td>
-    					<td></td>
-    					<td></td>
+              <td class="custom-table course2">CS 242<br>Boyer Hall 014</td>
     				</tr>
     				<tr>
-    					<th>04:30 - 05:50</th>
+    					<th>04:00 - 05:00</th>
               <td></td>
     					<td></td>
     					<td></td>
