Cleaned up menu, updated content with new courses, updated resume

--- a/index.html
+++ b/index.html
@@ -51,23 +51,6 @@
             <li><a href="docs/VitalyFordResume.pdf" target="_blank" rel="noopener norefferer">Resume</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="schedule.html">Schedule</a></li>
-            <!--<li class="dropdown">
-      			  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">CSC 2120 <span class="caret"></span></a>
-      			  <ul class="dropdown-menu">
-        				<li><a href="2120syllabus.html">Syllabus</a></li>
-        				<li><a href="2120programs.html">Programs</a></li>
-                <li><a href="2120examples.html">Examples</a></li>
-        				<li><a href="schedule.html">Office Hours Schedule</a></li>
-      			  </ul>
-      			</li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">CSC 2121 <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="2121syllabus.html">Syllabus</a></li>
-                <li><a href="2121labs.html">Labs</a></li>
-                <li><a href="schedule.html">Office Hours Schedule</a></li>
-              </ul>
-            </li>-->
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -79,8 +62,8 @@
       <div class="jumbotron">
         <h2><img src="images/profile.jpg" class="img-responsive img-square left thumb-profile" alt="Profile picture"/>
           <code> &gt;&gt; Welcome to my website!</code></h2>
-        <p style="padding-top: 20px;">My name is Vitaly Ford. I am an Assistant Professor at Arcadia University, Computer Science and Mathematics Department (<a href="https://www.arcadia.edu/profile/vitaly-ford" target="_blank" rel="noopener norefferer">profile link</a>). I will be teaching Computer Architecture and Data Structures and Algorithms this Fall.</p>
-        <p>Also, I am serving as a senior advisor for the <a href="http://blogs.cae.tntech.edu/cybereagles/" target="_blank" rel="noopener norefferer">CyberEagles Cybersecurity Club</a> and as Director of Chapter Development at the <a href="http://cyberstudents.org/" target="_blank" rel="noopener norefferer">National Cybersecurity Student Association</a>.</p>
+        <p style="padding-top: 20px;">My name is Vitaly Ford. I am an Assistant Professor at Arcadia University, Computer Science and Mathematics Department (<a href="https://www.arcadia.edu/profile/vitaly-ford" target="_blank" rel="noopener norefferer">profile link</a>). I teach Computer Architecture, Data Structures and Algorithms, Operating Systems, Network Security, and Capstone courses.</p>
+        <p>Also, I am serving as the Director of Chapter Development at the <a href="http://cyberstudents.org/" target="_blank" rel="noopener norefferer">National Cybersecurity Student Association</a>.</p>
         <hr>
         <p>In my spare time, I enjoy playing table tennis and chess as well as participating in Capture the Flag competitions and coaching student cybersecurity teams.</p>
 		<hr>
