--- a/schedule.html
+++ b/schedule.html
@@ -50,7 +50,7 @@
             <li><a href="publications.html">Publications</a></li>
             <li><a href="docs/VitalyFordResume.pdf" target="_blank" rel="noopener norefferer">Resume</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="schedule.html">Schedule</a></li>
+            <li class="active"><a href="schedule.html">Schedule</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
