--- a/schedule.html
+++ b/schedule.html
@@ -60,7 +60,7 @@
 
       <!-- Main component for a primary marketing message or call to action -->
       <div class="jumbotron">
-        <h2><code> &gt;&gt; My schedule for Spring 2018</code></h2>
+        <h2><code> &gt;&gt; My schedule for Fall 2018</code></h2>
         <br>
         <p>Please email me if you would like to set an appointment outside of the office hours.</p>
         <div class="table-responsive normal-text">
@@ -92,45 +92,45 @@
     				</tr>
     				<tr>
     					<th>09:45 - 10:50</th>
-    					<td class="custom-table course1">CS 358<br>Boyer Hall 008</td>
-              <td class="custom-table course1">CS 358<br>Boyer Hall 008</td>
-              <td class="custom-table course1">CS 358<br>Boyer Hall 008</td>
+    					<td class="custom-table course1">CS 362<br>Boyer Hall 008</td>
+              <td class="custom-table course1">CS 362<br>Boyer Hall 008</td>
+              <td class="custom-table course1">CS 362<br>Boyer Hall 008</td>
     				</tr>
     				<tr>
-    					<th>11:00 - 12:00</th>
-              <td class="custom-table course3">Office Hours</td>
-    					<td class="custom-table course3">Office Hours</td>
+    					<th>11:00 - 12:05</th>
+              <td class="custom-table course2">CS 203<br>Boyer Hall 014</td>
+    					<td class="custom-table course2">CS 203<br>Boyer Hall 014</td>
+    					<td class="custom-table course2">CS 203<br>Boyer Hall 014</td>
+    				</tr>
+    				<tr>
+    					<th>12:10 - 01:30</th>
+    					<td></td>
+    					<td></td>
+    					<td></td>
+    					<td></td>
     					<td></td>
     				</tr>
     				<tr>
-    					<th>12:00 - 01:30</th>
+    					<th>01:30 - 03:00</th>
+              <td class="custom-table">Office Hours</td>
     					<td></td>
-    					<td></td>
-    					<td></td>
-    					<td></td>
-    					<td></td>
-    				</tr>
-    				<tr>
-    					<th>01:30 - 02:30</th>
-              <td class="custom-table course3">Office Hours</td>
-    					<td></td>
-    					<td class="custom-table course3">Office Hours</td>
+    					<td class="custom-table">Office Hours</td>
     					<td></td>
     					<td></td>
     				</tr>
             <tr>
-    					<th>02:45 - 03:50</th>
-              <td class="custom-table course2">CS 242<br>Boyer Hall 014</td>
-    					<td></td>
-              <td class="custom-table course2">CS 242<br>Boyer Hall 014</td>
-    					<td></td>
-              <td class="custom-table course2">CS 242<br>Boyer Hall 014</td>
-    				</tr>
-    				<tr>
-    					<th>04:00 - 05:00</th>
+    					<th>03:00 - 04:00</th>
               <td></td>
     					<td></td>
+              <td></td>
     					<td></td>
+              <td></td>
+    				</tr>
+    				<tr>
+    					<th>04:00 - 05:40</th>
+              <td class="custom-table course3">Capstone<br>Boyer Hall 014</td>
+    					<td></td>
+    					<td class="custom-table course3">Capstone<br>Boyer Hall 014</td>
     					<td></td>
     					<td></td>
     				</tr>
