Update with meet link

--- a/schedule.html
+++ b/schedule.html
@@ -49,8 +49,9 @@
             <li><a href="research.html">Research</a></li>
             <li><a href="publications.html">Publications</a></li>
             <li><a href="docs/VitalyFordResume.pdf" target="_blank" rel="noopener norefferer">Resume</a></li>
-            <li><a href="contact.html">Contact</a></li>
             <li class="active"><a href="schedule.html">Schedule</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="et.html">Meet</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
