--- a/schedule.html
+++ b/schedule.html
@@ -61,9 +61,9 @@
 
       <!-- Main component for a primary marketing message or call to action -->
       <div class="jumbotron">
-        <h2><code> &gt;&gt; My schedule for Fall 2018</code></h2>
+        <h2><code> &gt;&gt; My schedule for Spring 2019</code></h2>
         <br>
-        <p>Please email me if you would like to set an appointment outside of the office hours.</p>
+        <p>Email - is the best way to reach me and set up a meeting if you have questions.</p>
         <div class="table-responsive normal-text">
     		<table class="table table-bordered table-hover">
     			<thead>
@@ -93,15 +93,15 @@
     				</tr>
     				<tr>
     					<th>09:45 - 10:50</th>
-    					<td class="custom-table course1">CS 362<br>Boyer Hall 008</td>
-              <td class="custom-table course1">CS 362<br>Boyer Hall 008</td>
-              <td class="custom-table course1">CS 362<br>Boyer Hall 008</td>
+    					<td class="custom-table course1">CS 358<br>Boyer Hall 008</td>
+              <td class="custom-table course1">CS 358<br>Boyer Hall 008</td>
+              <td class="custom-table course1">CS 358<br>Boyer Hall 008</td>
     				</tr>
     				<tr>
     					<th>11:00 - 12:05</th>
-              <td class="custom-table course2">CS 203<br>Boyer Hall 014</td>
-    					<td class="custom-table course2">CS 203<br>Boyer Hall 014</td>
-    					<td class="custom-table course2">CS 203<br>Boyer Hall 014</td>
+              <td class="custom-table course2">CS 285<br>Boyer Hall 014</td>
+    					<td class="custom-table course2">CS 285<br>Boyer Hall 014</td>
+    					<td class="custom-table course2">CS 285<br>Boyer Hall 014</td>
     				</tr>
     				<tr>
     					<th>12:10 - 01:30</th>
