--- a/schedule.html
+++ b/schedule.html
@@ -51,6 +51,14 @@
             <li><a href="docs/VitalyFordResume.pdf" target="_blank" rel="noopener norefferer">Resume</a></li>
             <li class="active"><a href="schedule.html">Schedule</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                  aria-expanded="false">My Talks<span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                  <li><a href="docs/cybersecurity.pdf" target="_blank" rel="noopener norefferer">Obscurity in Cybersecurity</a></li>
+                  <li><a href="docs/aws.pdf" target="_blank" rel="noopener norefferer">Cloud (AWS) Workshop</a></li>
+              </ul>
+            </li>
             <li><a href="et.html">Meet</a></li>
           </ul>
         </div><!--/.nav-collapse -->
