--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                   aria-expanded="false">My Talks<span class="caret"></span></a>
               <ul class="dropdown-menu">
-                  <li><a href="docs/cybersecurity.pdf" target="_blank" rel="noopener norefferer">Obscurity in Cybersecurity</a></li>
+                  <li><a href="docs/obscurity-in-cybersecurity.pdf" target="_blank" rel="noopener norefferer">Obscurity in Cybersecurity</a></li>
                   <li><a href="docs/aws.pdf" target="_blank" rel="noopener norefferer">Cloud (AWS) Workshop</a></li>
               </ul>
             </li>
