Update resume and home page info

--- a/research.html
+++ b/research.html
@@ -103,7 +103,7 @@
         <h3>Recent Projects</h3>
         <ol style="font-size: 18px;">
           <li>
-            <p><a href="https://gencybercoin.tk" target="_blank" rel="noopener norefferer">GenCyberCoin</a> project has been sponsored by the NSA/NSF GenCyber program. GenCyberCoin is an incentive to encourage GenCyber camp students’ participation in camp activities. It teaches about:
+            <p><a href="https://github.com/vitalyford/gencybercoin" target="_blank" rel="noopener norefferer">GenCyberCoin</a> project has been sponsored by the NSA/NSF GenCyber program. GenCyberCoin is an incentive to encourage GenCyber camp students’ participation in camp activities. It teaches about:
             <ul style="font-size: 18px;">
               <li>Cryptocurrency concepts and digital currency trading markets</li>
               <li>Cybersecurity principles</li>
@@ -115,7 +115,7 @@
             </p>
           </li>
           <li>
-            <p>Inspired by the Computer Science Unplugged project, I recently developed a Capture the Flag (CTF) Unplugged that is an offline cybersecurity competition for K-8 and K-12 schools. CTF Unplugged introduces participants to cybersecurity competitions, shows different cybersecurity careers that they can pursue, and engages into a fun team-based competition without a need for technical preparation. For those who are interested in the project or would like to receive a free copy of CTF Unplugged, please contact me at: fordv@arcadia.edu.</p>
+            <p>Inspired by the Computer Science Unplugged project, I recently developed a Capture the Flag (CTF) Unplugged that is an offline cybersecurity competition for K-8 and K-12 schools. CTF Unplugged introduces participants to cybersecurity competitions, shows different cybersecurity careers that they can pursue, and engages into a fun team-based competition without a need for technical preparation. For those who are interested in the project or would like to receive a free copy of CTF Unplugged, please contact me.</p>
           </li>
           <li>
             <p>Another recent project I have worked on is about developing cybersecurity modules and curriculum for the <a href="https://www.tntech.edu/ceroc/outreach/gen-cyber" target="_blank" rel="noopener norefferer">GenCyber Camp at Tennessee Tech</a>. I lead a group at the <a href="https://www.tntech.edu/ceroc" target="_blank" rel="noopener norefferer">Cybersecurity Education Research and Outreach Center</a> that designed a month-long cybersecurity summer camp for the K-12 students in June 2016, and a week-long GenCyber camp in June 2017.</p>
