Change path variables in hacklock challenge

--- a/challenges/hacklock/no_submit.html
+++ b/challenges/hacklock/no_submit.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=320; user-scalable=no; initial-scale=1.0; maximum-scale=1.0" />
     <title>Pattern Lock</title>
 
-    <link rel="stylesheet" type="text/css" href="_style/patternlock.css"/>
-    <script src="_script/patternlock.js"></script>
+    <link rel="stylesheet" type="text/css" href="./style/patternlock.css"/>
+    <script src="./script/patternlock.js"></script>
 
 <style>
     body{
