--- a/challenges/hacklock/index.html
+++ b/challenges/hacklock/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=320; user-scalable=no; initial-scale=1.0; maximum-scale=1.0" />
+    <meta http-equiv="Content-Type" content="text/html, charset=utf-8" />
+    <meta name="viewport" content="width=320, user-scalable=no, initial-scale=1.0, maximum-scale=1.0" />
     <title>Pattern Lock</title>
 
-    <link rel="stylesheet" type="text/css" href="_style/patternlock.css"/>
-    <script src="_script/patternlock.js"></script>
+    <link rel="stylesheet" type="text/css" href="./css/patternlock.css"/>
+    <script src="./js/patternlock.js"></script>
 
     <script>
         function submitform(){
