--- a/research.html
+++ b/research.html
@@ -5,21 +5,21 @@ permalink: "/research/"
 ---
 
 <div class="row">
-    <div class="col-md-3">
-    <img src="/assets/images/smartGrid.jpg" class="img-responsive img-square thumb-research" alt="Smart grid picture"/>
-    <p class="text-center text-info">Smart Grid Privacy/Security</p>
+    <div class="col-md-3 col-xs-6">
+        <img src="/assets/images/cybersecurity.jpg" class="img-responsive img-square thumb-research" alt="Cybersecurity picture"/>
+        <p class="text-center text-info">Cybersecurity</p>
     </div>
-    <div class="col-md-3">
-    <img src="/assets/images/cybersecurity.jpg" class="img-responsive img-square thumb-research" alt="Cybersecurity picture"/>
-    <p class="text-center text-info">Cybersecurity</p>
+    <div class="col-md-3 col-xs-6">
+        <img src="/assets/images/machineLearning.jpg" class="img-responsive img-square thumb-research" alt="Machine learning picture"/>
+        <p class="text-center text-info">Machine Learning</p>
     </div>
-    <div class="col-md-3">
-    <img src="/assets/images/machineLearning.jpg" class="img-responsive img-square thumb-research" alt="Machine learning picture"/>
-    <p class="text-center text-info">Machine Learning</p>
+    <div class="col-md-3 col-xs-6">
+        <img src="/assets/images/education.jpg" class="img-responsive img-square thumb-research" alt="Education picture"/>
+        <p class="text-center text-info">CS Education</p>
     </div>
-    <div class="col-md-3">
-    <img src="/assets/images/education.jpg" class="img-responsive img-square thumb-research" alt="Education picture"/>
-    <p class="text-center text-info">Education</p>
+    <div class="col-md-3 col-xs-6">
+        <img src="/assets/images/smartGrid.jpg" class="img-responsive img-square thumb-research" alt="Smart grid picture"/>
+        <p class="text-center text-info">Smart Grid Privacy/Security</p>
     </div>
 </div>
 <h3 style="padding-top: 20px;">My research interests</h3>
