Make a bugs bunny meme and add it on 404 pages

--- a/404.html
+++ b/404.html
@@ -2,3 +2,9 @@
 layout: default
 title: "Error 404 :( Page not found"
 ---
+
+<div class="row">
+    <div class="text-center col-sm-6 col-sm-offset-3">
+        <img src="/assets/images/404meme.jpg" class="img-responsive img-square thumb-research img-thumbnail bg-info" alt="Bugs Bunny saying: it ain't gonna hack itself, doc"/>
+    </div>
+</div>
