Add CS362.2 to the schedule

--- a/schedule.html
+++ b/schedule.html
@@ -34,26 +34,22 @@ permalink: "/schedule/"
             </tr>
             <tr>
                 <th>09:45 - 10:50</th>
-                <td class="custom-table course1">CS 362<br>Boyer Hall 008</td>
-                <td class="custom-table course1">CS 362<br>Boyer Hall 008</td>
-                <td class="custom-table course1">CS 362<br>Boyer Hall 008</td>
+                <td class="custom-table course1">CS 362.1<br>Boyer Hall 008</td>
+                <td class="custom-table course1">CS 362.1<br>Boyer Hall 008</td>
+                <td class="custom-table course1">CS 362.1<br>Boyer Hall 008</td>
             </tr>
             <tr>
                 <th>11:00 - 12:05</th>
-                <td class="custom-table course2">CS 203<br>Boyer Hall 014</td>
-                <td class="custom-table course2">CS 203<br>Boyer Hall 014</td>
-                <td class="custom-table course2">CS 203<br>Boyer Hall 014</td>
+                <td class="custom-table course2">CS 203.1<br>Boyer Hall 014</td>
+                <td class="custom-table course2">CS 203.1<br>Boyer Hall 014</td>
+                <td class="custom-table course2">CS 203.1<br>Boyer Hall 014</td>
             </tr>
             <tr>
-                <th>12:10 - 01:30</th>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <th>12:10 - 01:00</th>
+                <td colspan="5" class="custom-table">Lunch</td>
             </tr>
             <tr>
-                <th>01:30 - 03:00</th>
+                <th>01:00 - 02:30</th>
                 <td class="custom-table">Office Hours</td>
                 <td></td>
                 <td class="custom-table">Office Hours</td>
@@ -61,12 +57,12 @@ permalink: "/schedule/"
                 <td></td>
             </tr>
             <tr>
-                <th>03:00 - 04:00</th>
+                <th>02:45 - 03:50</th>
+                <td class="custom-table course1">CS 362.2<br>Boyer Hall 008</td>
                 <td></td>
+                <td class="custom-table course1">CS 362.2<br>Boyer Hall 008</td>
                 <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td class="custom-table course1">CS 362.2<br>Boyer Hall 008</td>
             </tr>
             <tr>
                 <th>04:00 - 05:40</th>
