--- a/schedule.html
+++ b/schedule.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "Fall 2019 Schedule"
+title: "Spring 2020 Course Schedule"
 permalink: "/schedule/"
 ---
 
@@ -19,56 +19,80 @@ permalink: "/schedule/"
         </thead>
         <tbody>
             <tr>
-                <th>08:00 - 09:00</th>
-                <td></td>
+                <th>08:30 - 09:30</th>
+                <td class="custom-table course3">Ind Study<br>Boyer Hall 328</td>
                 <td rowspan="4" class="custom-table RandD">R &amp; D</td>
-                <td></td>
+                <td class="custom-table course3">Capstone<br>Boyer Hall 328</td>
                 <td rowspan="4" class="custom-table RandD">R &amp; D</td>
-                <td></td>
+                <td class="custom-table course3">GenCyberCoin Research<br>Boyer Hall 328</td>
             </tr>
             <tr>
-                <th>09:00 - 09:30</th>
+                <th>09:30 - 09:45</th>
                 <td></td>
                 <td></td>
                 <td></td>
             </tr>
             <tr>
                 <th>09:45 - 10:50</th>
-                <td class="custom-table course1">CS 362.1<br>Boyer Hall 008</td>
-                <td class="custom-table course1">CS 362.1<br>Boyer Hall 008</td>
-                <td class="custom-table course1">CS 362.1<br>Boyer Hall 008</td>
+                <td class="custom-table course1">CS 358<br>Boyer Hall 008</td>
+                <td class="custom-table course1">CS 358<br>Boyer Hall 008</td>
+                <td class="custom-table course1">CS 358<br>Boyer Hall 008</td>
             </tr>
             <tr>
-                <th>11:00 - 12:05</th>
-                <td class="custom-table course2">CS 203.1<br>Boyer Hall 014</td>
-                <td class="custom-table course2">CS 203.1<br>Boyer Hall 014</td>
-                <td class="custom-table course2">CS 203.1<br>Boyer Hall 014</td>
+                <th>11:00 - 11:45</th>
+                <td class="custom-table course3">Ind Study<br>Boyer Hall 328</td>
+                <td></td>
+                <td></td>
             </tr>
             <tr>
-                <th>12:10 - 01:00</th>
+                <th>11:45 - 12:05</th>
                 <td colspan="5" class="custom-table">Lunch</td>
             </tr>
             <tr>
-                <th>01:00 - 02:30</th>
-                <td class="custom-table">Office Hours</td>
+                <th>12:15 - 01:20</th>
+                <td class="custom-table course1">CS 242.2<br>Boyer Hall 014</td>
                 <td></td>
-                <td class="custom-table">Office Hours</td>
+                <td class="custom-table course1">CS 242.2<br>Boyer Hall 014</td>
                 <td></td>
+                <td class="custom-table course1">CS 242.2<br>Boyer Hall 014</td>
+            </tr>
+            <tr>
+                <th>01:20 - 02:00</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>02:00 - 02:45</th>
+                <td class="custom-table">Office Hours</td>
+                <td class="custom-table">Office Hours</td>
+                <td class="custom-table">Office Hours</td>
+                <td class="custom-table course3">Capstone<br>Boyer Hall 328</td>
                 <td></td>
             </tr>
             <tr>
                 <th>02:45 - 03:50</th>
-                <td class="custom-table course1">CS 362.2<br>Boyer Hall 008</td>
+                <td class="custom-table course1">CS 242.1<br>Boyer Hall 014</td>
+                <td class="custom-table">Office Hours</td>
+                <td class="custom-table course1">CS 242.1<br>Boyer Hall 014</td>
                 <td></td>
-                <td class="custom-table course1">CS 362.2<br>Boyer Hall 008</td>
-                <td></td>
-                <td class="custom-table course1">CS 362.2<br>Boyer Hall 008</td>
+                <td class="custom-table course1">CS 242.1<br>Boyer Hall 014</td>
             </tr>
             <tr>
-                <th>04:00 - 05:40</th>
-                <td class="custom-table course3">Capstone<br>Boyer Hall 014</td>
+                <th>04:00 - 05:00</th>
+                <td class="custom-table course3">Capstone<br>Boyer Hall 328</td>
                 <td></td>
-                <td class="custom-table course3">Capstone<br>Boyer Hall 014</td>
+                <td class="custom-table course3">Capstone<br>Boyer Hall 328</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>05:00 - 06:00</th>
+                <td class="custom-table course3">Ind Study<br>Boyer Hall 328</td>
+                <td></td>
+                <td class="custom-table course3">Ind Study<br>Boyer Hall 328</td>
                 <td></td>
                 <td></td>
             </tr>
