--- a/schedule.html
+++ b/schedule.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "Spring 2020 Course Schedule"
+title: "Fall 2020 Course Schedule"
 permalink: "/schedule/"
 ---
 
@@ -20,11 +20,11 @@ permalink: "/schedule/"
         <tbody>
             <tr>
                 <th>08:30 - 09:30</th>
-                <td class="custom-table course3">Ind Study<br>Boyer Hall 328</td>
+                <td class="custom-table course3">TBD</td>
                 <td rowspan="4" class="custom-table RandD">R &amp; D</td>
-                <td class="custom-table course3">Capstone<br>Boyer Hall 328</td>
+                <td class="custom-table course3"></td>
                 <td rowspan="4" class="custom-table RandD">R &amp; D</td>
-                <td class="custom-table course3">GenCyberCoin Research<br>Boyer Hall 328</td>
+                <td class="custom-table course3">TBD</td>
             </tr>
             <tr>
                 <th>09:30 - 09:45</th>
@@ -34,30 +34,18 @@ permalink: "/schedule/"
             </tr>
             <tr>
                 <th>09:45 - 10:50</th>
-                <td class="custom-table course1">CS 358<br>Boyer Hall 008</td>
-                <td class="custom-table course1">CS 358<br>Boyer Hall 008</td>
-                <td class="custom-table course1">CS 358<br>Boyer Hall 008</td>
+                <td class="custom-table course1">CS 203.1<br>Zoom</td>
+                <td class="custom-table course1">CS 203.1<br>Zoom</td>
+                <td class="custom-table course1">CS 203.1<br>Zoom</td>
             </tr>
             <tr>
-                <th>11:00 - 11:45</th>
-                <td class="custom-table course3">Ind Study<br>Boyer Hall 328</td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <th>11:45 - 12:05</th>
-                <td colspan="5" class="custom-table">Lunch</td>
+                <th>11:00 - 12:05</th>
+                <td class="custom-table course1">CS 203.2<br>Zoom</td>
+                <td class="custom-table course1">CS 203.2<br>Zoom</td>
+                <td class="custom-table course1">CS 203.2<br>Zoom</td>
             </tr>
             <tr>
                 <th>12:15 - 01:20</th>
-                <td class="custom-table course1">CS 242.2<br>Boyer Hall 014</td>
-                <td></td>
-                <td class="custom-table course1">CS 242.2<br>Boyer Hall 014</td>
-                <td></td>
-                <td class="custom-table course1">CS 242.2<br>Boyer Hall 014</td>
-            </tr>
-            <tr>
-                <th>01:20 - 02:00</th>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -65,34 +53,33 @@ permalink: "/schedule/"
                 <td></td>
             </tr>
             <tr>
-                <th>02:00 - 02:45</th>
-                <td class="custom-table">Office Hours</td>
+                <th>01:20 - 02:30</th>
+                <td class="custom-table">TBD</td>
                 <td></td>
-                <td class="custom-table">Office Hours</td>
-                <td class="custom-table course3">Capstone<br>Boyer Hall 328</td>
+                <td class="custom-table">TBD</td>
+                <td class="custom-table course3">TBD</td>
                 <td></td>
             </tr>
             <tr>
                 <th>02:45 - 03:50</th>
-                <td class="custom-table course1">CS 242.1<br>Boyer Hall 014</td>
-                <td class="custom-table">Office Hours</td>
-                <td class="custom-table course1">CS 242.1<br>Boyer Hall 014</td>
+                <td class="custom-table course2">CS 362.1<br>Zoom</td>
+                <td class="custom-table">TBD</td>
+                <td class="custom-table course2">CS 362.1<br>Zoom</td>
                 <td></td>
-                <td class="custom-table course1">CS 242.1<br>Boyer Hall 014</td>
+                <td class="custom-table course2">CS 362.1<br>Zoom</td>
             </tr>
             <tr>
                 <th>04:00 - 05:00</th>
-                <td class="custom-table course3">Capstone<br>Boyer Hall 328</td>
-                <td></td>
-                <td class="custom-table course3">Capstone<br>Boyer Hall 328</td>
+                <td class="custom-table course3">TBD</td>
+                <td rowspan="2" class="custom-table">Senate</td>
+                <td class="custom-table course3">TBD</td>
                 <td></td>
                 <td></td>
             </tr>
             <tr>
                 <th>05:00 - 06:00</th>
-                <td class="custom-table course3">Ind Study<br>Boyer Hall 328</td>
-                <td></td>
-                <td class="custom-table course3">Ind Study<br>Boyer Hall 328</td>
+                <td class="custom-table course3">TBD</td>
+                <td class="custom-table course3">TBD</td>
                 <td></td>
                 <td></td>
             </tr>
