Add ind study on wed

--- a/schedule.html
+++ b/schedule.html
@@ -72,7 +72,7 @@ permalink: "/schedule/"
                 <th>04:00 - 05:00</th>
                 <td class="custom-table course3">TBD</td>
                 <td rowspan="2" class="custom-table">Senate</td>
-                <td class="custom-table course3">TBD</td>
+                <td class="custom-table course3">CS389.1 Ind Study<br>Numerical Optimization</td>
                 <td></td>
                 <td></td>
             </tr>
