--- a/schedule.html
+++ b/schedule.html
@@ -20,11 +20,11 @@ permalink: "/schedule/"
         <tbody>
             <tr>
                 <th>08:30 - 09:30</th>
-                <td class="custom-table course3">TBD</td>
-                <td rowspan="4" class="custom-table RandD">R &amp; D</td>
-                <td class="custom-table course3"></td>
-                <td rowspan="4" class="custom-table RandD">R &amp; D</td>
-                <td class="custom-table course3">TBD</td>
+                <td></td>
+                <td rowspan="3" class="custom-table RandD">R &amp; D</td>
+                <td></td>
+                <td rowspan="3" class="custom-table RandD">R &amp; D</td>
+                <td></td>
             </tr>
             <tr>
                 <th>09:30 - 09:45</th>
@@ -41,46 +41,47 @@ permalink: "/schedule/"
             <tr>
                 <th>11:00 - 12:05</th>
                 <td class="custom-table course1">CS 203.2<br>Zoom</td>
+                <td class="custom-table course3">Capstone<br>Team II</td>
                 <td class="custom-table course1">CS 203.2<br>Zoom</td>
+                <td></td>
                 <td class="custom-table course1">CS 203.2<br>Zoom</td>
             </tr>
             <tr>
-                <th>12:15 - 01:20</th>
+                <th>12:15 - 01:00</th>
                 <td></td>
-                <td></td>
+                <td rowspan="2" class="custom-table other">Dept<br>Meeting</td>
                 <td></td>
                 <td></td>
                 <td></td>
             </tr>
             <tr>
-                <th>01:20 - 02:30</th>
-                <td class="custom-table">TBD</td>
+                <th>01:00 - 02:00</th>
+                <td class="custom-table course3">Capstone<br>Team I</td>
+                <td class="custom-table course3">Capstone<br>Team III</td>
                 <td></td>
-                <td class="custom-table">TBD</td>
-                <td class="custom-table course3">TBD</td>
                 <td></td>
             </tr>
             <tr>
                 <th>02:45 - 03:50</th>
                 <td class="custom-table course2">CS 362.1<br>Zoom</td>
-                <td class="custom-table">TBD</td>
+                <td></td>
                 <td class="custom-table course2">CS 362.1<br>Zoom</td>
                 <td></td>
                 <td class="custom-table course2">CS 362.1<br>Zoom</td>
             </tr>
             <tr>
                 <th>04:00 - 05:00</th>
-                <td class="custom-table course3">TBD</td>
-                <td rowspan="2" class="custom-table">Senate</td>
-                <td class="custom-table course3">CS389.1 Ind Study<br>Numerical Optimization</td>
+                <td class="custom-table RandD">R & D</td>
+                <td rowspan="2" class="custom-table other">Senate</td>
+                <td class="custom-table course3">CS 389.1<br>Num Optim</td>
                 <td></td>
                 <td></td>
             </tr>
             <tr>
-                <th>05:00 - 06:00</th>
-                <td class="custom-table course3">TBD</td>
-                <td class="custom-table course3">TBD</td>
+                <th>05:30 - 06:30</th>
                 <td></td>
+                <td></td>
+                <td class="custom-table course3">Capstone<br>Team IV</td>
                 <td></td>
             </tr>
         </tbody>
