--- a/schedule.html
+++ b/schedule.html
@@ -34,54 +34,78 @@ permalink: "/schedule/"
             </tr>
             <tr>
                 <th>09:45 - 10:50</th>
-                <td class="custom-table course1">CS 203.1<br>Zoom</td>
-                <td class="custom-table course1">CS 203.1<br>Zoom</td>
-                <td class="custom-table course1">CS 203.1<br>Zoom</td>
+                <td class="custom-table course1">CS 262.1<br>Zoom</td>
+                <td class="custom-table course1">CS 262.1<br>Zoom</td>
+                <td class="custom-table course1">CS 262.1<br>Zoom</td>
             </tr>
             <tr>
-                <th>11:00 - 12:05</th>
-                <td class="custom-table course1">CS 203.2<br>Zoom</td>
-                <td class="custom-table course3">Capstone<br>Team II</td>
-                <td class="custom-table course1">CS 203.2<br>Zoom</td>
-                <td></td>
-                <td class="custom-table course1">CS 203.2<br>Zoom</td>
-            </tr>
-            <tr>
-                <th>12:15 - 01:00</th>
-                <td></td>
-                <td rowspan="2" class="custom-table other">Dept<br>Meeting</td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <th>01:00 - 02:00</th>
+                <th>11:00 - 12:00</th>
                 <td class="custom-table course3">Capstone<br>Team I</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>12:15 - 01:20</th>
+                <td class="custom-table course2">CS 358.1<br>Zoom</td>
+                <td></td>
+                <td class="custom-table course2">CS 358.1<br>Zoom</td>
+                <td></td>
+                <td class="custom-table course2">CS 358.1<br>Zoom</td>
+            </tr>
+            <tr>
+                <th>02:00 - 03:00</th>
+                <td></td>
+                <td class="custom-table course3">Capstone<br>Team II</td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>03:00 - 04:00</th>
+                <td></td>
+                <td class="custom-table other">NSF S-STEM</td>
                 <td class="custom-table course3">Capstone<br>Team III</td>
                 <td></td>
                 <td></td>
             </tr>
             <tr>
-                <th>02:45 - 03:50</th>
-                <td class="custom-table course2">CS 362.1<br>Zoom</td>
-                <td></td>
-                <td class="custom-table course2">CS 362.1<br>Zoom</td>
-                <td></td>
-                <td class="custom-table course2">CS 362.1<br>Zoom</td>
-            </tr>
-            <tr>
                 <th>04:00 - 05:00</th>
                 <td class="custom-table RandD">R & D</td>
                 <td rowspan="2" class="custom-table other">Senate</td>
-                <td class="custom-table course3">CS 389.1<br>Num Optim</td>
+                <td></td>
+                <td rowspan="2" class="custom-table other">Dept Meeting</td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>05:00 - 06:00</th>
+                <td></td>
                 <td></td>
                 <td></td>
             </tr>
             <tr>
-                <th>05:30 - 06:30</th>
+                <th>06:00 - 07:00</th>
+                <td></td>
+                <td></td>
                 <td></td>
                 <td></td>
                 <td class="custom-table course3">Capstone<br>Team IV</td>
+            </tr>
+            <tr>
+                <th>07:00 - 08:00</th>
+                <td></td>
+                <td></td>
+                <td class="custom-table RandD">NCSA</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>08:00 - 09:00</th>
+                <td></td>
+                <td class="custom-table RandD">WiCyS</td>
+                <td></td>
+                <td></td>
                 <td></td>
             </tr>
         </tbody>
