--- a/schedule.html
+++ b/schedule.html
@@ -27,59 +27,55 @@ permalink: "/schedule/"
                 <td></td>
             </tr>
             <tr>
-                <th>09:30 - 09:45</th>
+                <th>09:30 - 11:00</th>
                 <td></td>
                 <td></td>
                 <td></td>
-            </tr>
-            <tr>
-                <th>09:45 - 10:50</th>
-                <td class="custom-table course1">CS 262.1<br>Zoom</td>
-                <td class="custom-table course1">CS 262.1<br>Zoom</td>
-                <td class="custom-table course1">CS 262.1<br>Zoom</td>
+                <td></td>
+                <td></td>
             </tr>
             <tr>
                 <th>11:00 - 12:00</th>
-                <td class="custom-table course3">Capstone<br>Team I</td>
                 <td></td>
                 <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <th>12:15 - 01:20</th>
-                <td class="custom-table course2">CS 358.1<br>Zoom</td>
-                <td></td>
-                <td class="custom-table course2">CS 358.1<br>Zoom</td>
-                <td></td>
-                <td class="custom-table course2">CS 358.1<br>Zoom</td>
-            </tr>
-            <tr>
-                <th>02:00 - 03:00</th>
-                <td></td>
-                <td class="custom-table course3">Capstone<br>Team II</td>
                 <td></td>
                 <td></td>
                 <td></td>
             </tr>
             <tr>
-                <th>03:00 - 04:00</th>
+                <th>12:00 - 01:30</th>
                 <td></td>
-                <td class="custom-table other">NSF S-STEM</td>
-                <td class="custom-table course3">Capstone<br>Team III</td>
+                <td rowspan="2" class="custom-table other">Dept Meeting</td>
                 <td></td>
                 <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>01:30 - 02:35</th>
+                <td class="custom-table course1">CS 362.1<br>Boyer 14</td>
+                <td class="custom-table course1">CS 362.1<br>Boyer 14</td>
+                <td></td>
+                <td class="custom-table course1">CS 362.1<br>Boyer 14</td>
+            </tr>
+            <tr>
+                <th>02:45 - 03:50</th>
+                <td class="custom-table course2">CS 203.1<br>Boyer 14</td>
+                <td></td>
+                <td class="custom-table course2">CS 203.1<br>Boyer 14</td>
+                <td></td>
+                <td class="custom-table course2">CS 203.1<br>Boyer 14</td>
             </tr>
             <tr>
                 <th>04:00 - 05:00</th>
                 <td class="custom-table RandD">R & D</td>
                 <td rowspan="2" class="custom-table other">Senate</td>
                 <td></td>
-                <td rowspan="2" class="custom-table other">Dept Meeting</td>
+                <td></td>
                 <td></td>
             </tr>
             <tr>
                 <th>05:00 - 06:00</th>
+                <td></td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -90,7 +86,7 @@ permalink: "/schedule/"
                 <td></td>
                 <td></td>
                 <td></td>
-                <td class="custom-table course3">Capstone<br>Team IV</td>
+                <td></td>
             </tr>
             <tr>
                 <th>07:00 - 08:00</th>
