Update schedule for spring 2022

--- a/schedule.html
+++ b/schedule.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "Fall 2021 Course Schedule"
+title: "Spring 2022 Course Schedule"
 permalink: "/schedule/"
 ---
 
@@ -27,10 +27,10 @@ permalink: "/schedule/"
                 <td></td>
             </tr>
             <tr>
-                <th>09:30 - 11:00</th>
-                <td></td>
-                <td></td>
-                <td></td>
+                <th>09:45 - 10:50</th>
+                <td class="custom-table course1">CS 242.1<br>Boyer 14</td>
+                <td class="custom-table course1">CS 242.1<br>Boyer 14</td>
+                <td class="custom-table course1">CS 242.1<br>Boyer 14</td>
             </tr>
             <tr>
                 <th>11:00 - 12:00</th>
@@ -47,19 +47,19 @@ permalink: "/schedule/"
                 <td></td>
             </tr>
             <tr>
-                <th>01:30 - 02:35</th>
-                <td class="custom-table course1">CS 362.1<br>Boyer 14</td>
-                <td class="custom-table course1">CS 362.1<br>Boyer 14</td>
+                <th>12:15 - 01:20</th>
+                <td class="custom-table course2">CS 358.1<br>Boyer 14</td>
+                <td class="custom-table course2">CS 358.1<br>Boyer 14</td>
                 <td></td>
-                <td class="custom-table course1">CS 362.1<br>Boyer 14</td>
+                <td class="custom-table course2">CS 358.1<br>Boyer 14</td>
             </tr>
             <tr>
-                <th>02:45 - 03:50</th>
-                <td class="custom-table course2">CS 203.1<br>Boyer 14</td>
+                <th>01:30 - 04:00</th>
                 <td></td>
-                <td class="custom-table course2">CS 203.1<br>Boyer 14</td>
                 <td></td>
-                <td class="custom-table course2">CS 203.1<br>Boyer 14</td>
+                <td></td>
+                <td></td>
+                <td></td>
             </tr>
             <tr>
                 <th>04:00 - 05:00</th>
