Update schedule to fall 2022

--- a/schedule.html
+++ b/schedule.html
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: "Spring 2022 Course Schedule"
+title: "Fall 2022 Course Schedule"
 permalink: "/schedule/"
 ---
 
-<p class="lead">Email - is the best way to reach me and set up a meeting if you have questions.</p>
+<p class="lead">Email - the best way to reach me and set up a meeting.</p>
 <div class="table-responsive normal-text">
     <table class="table table-bordered table-hover">
         <thead>
@@ -28,9 +28,9 @@ permalink: "/schedule/"
             </tr>
             <tr>
                 <th>09:45 - 10:50</th>
-                <td class="custom-table course1">CS 242.1<br>Boyer 14</td>
-                <td class="custom-table course1">CS 242.1<br>Boyer 14</td>
-                <td class="custom-table course1">CS 242.1<br>Boyer 14</td>
+                <td class="custom-table course1">CS 203.1<br>Boyer 19</td>
+                <td class="custom-table course1">CS 203.1<br>Boyer 19</td>
+                <td class="custom-table course1">CS 203.1<br>Boyer 19</td>
             </tr>
             <tr>
                 <th>11:00 - 12:00</th>
@@ -40,24 +40,24 @@ permalink: "/schedule/"
             </tr>
             <tr>
                 <th>12:00 - 01:30</th>
-                <td></td>
+                <td>CS 389.3<br>Ind Study</td>
                 <td rowspan="2" class="custom-table other">Dept Meeting</td>
                 <td></td>
                 <td></td>
                 <td></td>
             </tr>
             <tr>
-                <th>12:15 - 01:20</th>
-                <td class="custom-table course2">CS 358.1<br>Boyer 14</td>
-                <td class="custom-table course2">CS 358.1<br>Boyer 14</td>
+                <th>01:30 - 02:35</th>
+                <td class="custom-table course2">CS 362.1<br>Boyer 14</td>
+                <td class="custom-table course2">CS 362.1<br>Boyer 14</td>
                 <td></td>
-                <td class="custom-table course2">CS 358.1<br>Boyer 14</td>
+                <td class="custom-table course2">CS 362.1<br>Boyer 14</td>
             </tr>
             <tr>
-                <th>01:30 - 04:00</th>
+                <th>03:00 - 04:00</th>
+                <td>CS 389.2<br>Ind Study</td>
                 <td></td>
-                <td></td>
-                <td></td>
+                <td>CS 389.4<br>Ind Study</td>
                 <td></td>
                 <td></td>
             </tr>
