Udpate styles for ind study

--- a/schedule.html
+++ b/schedule.html
@@ -39,8 +39,8 @@ permalink: "/schedule/"
                 <td></td>
             </tr>
             <tr>
-                <th>12:00 - 01:30</th>
-                <td>CS 389.3<br>Ind Study</td>
+                <th>12:10 - 01:10</th>
+                <td class="custom-table course3">CS 389.3<br>Ind Study</td>
                 <td rowspan="2" class="custom-table other">Dept Meeting</td>
                 <td></td>
                 <td></td>
@@ -55,9 +55,9 @@ permalink: "/schedule/"
             </tr>
             <tr>
                 <th>03:00 - 04:00</th>
-                <td>CS 389.2<br>Ind Study</td>
+                <td class="custom-table course3">CS 389.2<br>Ind Study</td>
                 <td></td>
-                <td>CS 389.4<br>Ind Study</td>
+                <td class="custom-table course3">CS 389.4<br>Ind Study</td>
                 <td></td>
                 <td></td>
             </tr>
