Update schedule for spring 2023

--- a/schedule.html
+++ b/schedule.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "Fall 2022 Course Schedule"
+title: "Spring 2023 Course Schedule"
 permalink: "/schedule/"
 ---
 
@@ -21,43 +21,47 @@ permalink: "/schedule/"
             <tr>
                 <th>08:30 - 09:30</th>
                 <td></td>
-                <td rowspan="3" class="custom-table RandD">R &amp; D</td>
+                <td class="custom-table course3">Capstone I<br>Boyer 328</td>
+                <td class="custom-table course3">Ind Study I<br>Boyer 328</td>
                 <td></td>
-                <td rowspan="3" class="custom-table RandD">R &amp; D</td>
                 <td></td>
             </tr>
             <tr>
                 <th>09:45 - 10:50</th>
-                <td class="custom-table course1">CS 203.1<br>Boyer 19</td>
-                <td class="custom-table course1">CS 203.1<br>Boyer 19</td>
-                <td class="custom-table course1">CS 203.1<br>Boyer 19</td>
+                <td class="custom-table course1">CS 262.1<br>Boyer 8</td>
+                <td class="custom-table course3">Capstone II<br>Boyer 328</td>
+                <td class="custom-table course1">CS 262.1<br>Boyer 8</td>
+                <td class="custom-table course3">Ind Study II<br>Boyer 328</td>
+                <td class="custom-table course1">CS 262.1<br>Boyer 8</td>
             </tr>
             <tr>
-                <th>11:00 - 12:00</th>
+                <th>11:00 - 12:05</th>
+                <td class="custom-table course2">CS 358.1<br>Boyer 14</td>
                 <td></td>
+                <td class="custom-table course2">CS 358.1<br>Boyer 14</td>
                 <td></td>
-                <td></td>
+                <td class="custom-table course2">CS 358.1<br>Boyer 14</td>
             </tr>
             <tr>
-                <th>12:10 - 01:10</th>
-                <td class="custom-table course3">CS 389.3<br>Ind Study</td>
+                <th>12:05 - 01:00</th>
+                <td class="custom-table RandD">Lunch</td>
                 <td rowspan="2" class="custom-table other">Dept Meeting</td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td class="custom-table RandD">Lunch</td>
+                <td class="custom-table RandD">Lunch</td>
+                <td class="custom-table RandD">Lunch</td>
             </tr>
             <tr>
-                <th>01:30 - 02:35</th>
-                <td class="custom-table course2">CS 362.1<br>Boyer 14</td>
-                <td class="custom-table course2">CS 362.1<br>Boyer 14</td>
+                <th>01:00 - 02:00</th>
+                <td class="custom-table course3">Capstone III<br>Boyer 328</td>
+                <td class="custom-table course3">Capstone IV<br>Boyer 328</td>
                 <td></td>
-                <td class="custom-table course2">CS 362.1<br>Boyer 14</td>
+                <td></td>
             </tr>
             <tr>
                 <th>03:00 - 04:00</th>
-                <td class="custom-table course3">CS 389.2<br>Ind Study</td>
                 <td></td>
-                <td class="custom-table course3">CS 389.4<br>Ind Study</td>
+                <td></td>
+                <td></td>
                 <td></td>
                 <td></td>
             </tr>
@@ -65,9 +69,9 @@ permalink: "/schedule/"
                 <th>04:00 - 05:00</th>
                 <td class="custom-table RandD">R & D</td>
                 <td rowspan="2" class="custom-table other">Senate</td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td class="custom-table RandD">R & D</td>
+                <td class="custom-table RandD">R & D</td>
+                <td class="custom-table RandD">R & D</td>
             </tr>
             <tr>
                 <th>05:00 - 06:00</th>
@@ -88,15 +92,15 @@ permalink: "/schedule/"
                 <th>07:00 - 08:00</th>
                 <td></td>
                 <td></td>
-                <td class="custom-table RandD">NCSA</td>
+                <td></td>
                 <td></td>
                 <td></td>
             </tr>
             <tr>
                 <th>08:00 - 09:00</th>
-                <td></td>
+                <td class="custom-table other">NCL team<br>prep</td>
                 <td class="custom-table RandD">WiCyS</td>
-                <td></td>
+                <td class="custom-table other">Coding team<br>prep</td>
                 <td></td>
                 <td></td>
             </tr>
