Add capstone V on schedule

--- a/schedule.html
+++ b/schedule.html
@@ -23,7 +23,7 @@ permalink: "/schedule/"
                 <td></td>
                 <td class="custom-table course3">Capstone I<br>Boyer 328</td>
                 <td class="custom-table course3">Ind Study I<br>Boyer 328</td>
-                <td></td>
+                <td class="custom-table course3">Capstone V<br>Boyer 328</td>
                 <td></td>
             </tr>
             <tr>
