Update contact - Arcadia profile url

--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@ Glenside, PA 19038
             </tr>
             <tr>
                 <td>Arcadia Profile</td>
-                <td><a href="https://www.arcadia.edu/profile/vitaly-ford" target="_blank" rel="noopener norefferer">https://www.arcadia.edu/profile/vitaly-ford</a></td>
+                <td><a href="https://www.arcadia.edu/faculty-and-staff/vitaly-ford/" target="_blank" rel="noopener norefferer">https://www.arcadia.edu/faculty-and-staff/vitaly-ford/</a></td>
             </tr>
         </tbody>
     </table>
