Add nsf satc edu grant

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ alt_text: "Profile picture"
 <p>In my spare time, I enjoy playing table tennis and chess as well as participating in Capture the Flag competitions and coaching student cybersecurity and programming teams.</p>
 <hr>
 <ul>
+    <li><p class="lead">Co-PI of <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2225470&HistoricalAwards=false" target="_blank" rel="noopener norefferer">NSF SaTC: EDU: Cybersecurity Faculty Development for High School Teachers</a> Grant, 2023 - 2026</p></li>
     <li><p class="lead"><a href="https://teachcyber.tk" target="_blank" rel="noopener norefferer">TeachCyber</a> - a library of resources to teach and learn cybersecurity</p></li>
     <li><p class="lead"><a href="https://github.com/vitalyford/gencybercoin" target="_blank" rel="noopener norefferer">GenCyberCoin</a> - an incentive web platform to teach about blockchain, digital currency, cybersescurity principles, bug bounty, social engineering, and ethical norms and values</p></li>
     <li><p class="lead"><a href="/ctf-unplugged/CTF_Unplugged_May_2019.docx" target="_blank" rel="noopener norefferer">CTF Unplugged</a> - an unplugged version of a Capture The Flag competition</p></li>
