Update the calendar link and remove unnecessary pages

--- a/et.html
+++ b/et.html
@@ -1,1 +1,1 @@
-<script>window.location="https://calendar.google.com/calendar/selfsched?sstoken=UU5HY3NTQ1RzaDlCfGRlZmF1bHR8NzViYTA4M2U4MWYyZjk0YmJlNDg0NmM1NDE3ZGM5NjA"</script>
+<script>window.location="https://calendar.app.google/MXrjXGum8X1LtWKA8"</script>
