Add coffee button

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ alt_text: "Profile picture"
 ---
 
 <p style="padding-top: 20px;">My name is Vitaly Ford. I am an Associate Professor at Arcadia University, Computer Science and Mathematics Department (<a href="https://www.arcadia.edu/profile/vitaly-ford" target="_blank" rel="noopener norefferer">profile link</a>). I teach Computer Architecture, Data Structures and Algorithms, Operating Systems, Network Security, Introduction to Practical Security Assessment (aka pentesting), and Capstone courses.</p>
-<p>Also, I am serving as the Director of Cybersecurity Research and Development at the <a href="https://cyberstudents.org/" target="_blank" rel="noopener norefferer">National Cybersecurity Student Association</a> and the Student Chapter Coordinator for the <a href="https://www.wicys.org/" target="_blank" rel="noopener norefferer">Women in Cybersecurity organization</a>.</p>
+<p>Also, I served as the Director of Cybersecurity Research and Development at the <a href="https://cyberstudents.org/" target="_blank" rel="noopener norefferer">National Cybersecurity Student Association</a> and currently serve as the Student Chapter Coordinator for the <a href="https://www.wicys.org/" target="_blank" rel="noopener norefferer">Women in Cybersecurity organization</a>.</p>
 <hr>
 <p>In the summer of 2023, I co-founded Citodex Technology Ltd., as its CTO. We are developing an AI SaaS product for the specialty insurance sector to automate the processing and management of documents (policies, submissions, etc.).</p>
 <hr>
@@ -28,6 +28,13 @@ alt_text: "Profile picture"
 </ul>
 <hr>
 <blockquote class="blockquote-reverse lead" style="background-color: #e7e7e7;">
-    <p><q>Teach me and I will forget. Show me and I may remember. Involve me and I’ll understand.</q></p>
+    <p><q>Teach me and I will forget. Show me and I may remember. Involve me and I'll understand.</q></p>
     <footer><cite title="Source Title">Xun Kuang</cite></footer>
 </blockquote>
+<hr>
+<div style="text-align: center; padding: 20px;">
+    <h4>Support My Work</h4>
+    <p>If you find my research, teaching, or projects helpful, consider buying me a coffee!</p>
+    <img src="/assets/images/buymecoffee-qr.png" alt="Buy Me Coffee QR Code" style="max-width: 200px; height: auto; border: 2px solid #ddd; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+    <p style="margin-top: 10px; font-size: 0.9em; color: #666;">Scan the QR code or visit <a href="https://coff.ee/vitalyfordy" target="_blank" rel="noopener noreferrer" style="color: #0066cc; text-decoration: none;">coff.ee/vitalyfordy</a></p>
+</div>
