Comment out coffee button section

--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@ alt_text: "Profile picture"
     <p><q>Teach me and I will forget. Show me and I may remember. Involve me and I'll understand.</q></p>
     <footer><cite title="Source Title">Xun Kuang</cite></footer>
 </blockquote>
-<hr>
+<!-- <hr>
+<p>For the curious eyes :) </p>
 <div style="text-align: center; padding: 20px;">
     <h4>Support My Work</h4>
     <p>If you find my research, teaching, or projects helpful, consider buying me a coffee!</p>
     <img src="/assets/images/buymecoffee-qr.png" alt="Buy Me Coffee QR Code" style="max-width: 200px; height: auto; border: 2px solid #ddd; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
     <p style="margin-top: 10px; font-size: 0.9em; color: #666;">Scan the QR code or visit <a href="https://coff.ee/vitalyfordy" target="_blank" rel="noopener noreferrer" style="color: #0066cc; text-decoration: none;">coff.ee/vitalyfordy</a></p>
-</div>
+</div> -->
