--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@ alt_text: "Profile picture"
     <p><q>Teach me and I will forget. Show me and I may remember. Involve me and I'll understand.</q></p>
     <footer><cite title="Source Title">Xun Kuang</cite></footer>
 </blockquote>
+<blockquote class="blockquote-reverse lead" style="background-color: #e7e7e7;">
+    <p><q>Reach for the stars, and you won't even notice when you pass the sky.</q></p>
+    <footer><cite title="Source Title">Vitaly Ford</cite></footer>
+</blockquote>
 <!-- <hr>
 <p>For the curious eyes :) </p>
 <div style="text-align: center; padding: 20px;">
